--- a/package.json
+++ b/package.json
@@ -14,6 +14,9 @@
   "dependencies": {
     "@quasar/extras": "^1.0.0",
     "axios": "^0.18.1",
+    "emailjs-com": "^2.4.1",
+    "jspdf": "^1.5.3",
+    "jspdf-autotable": "^3.5.6",
     "quasar": "^1.0.0"
   },
   "devDependencies": {
